--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -171,6 +171,7 @@
         </RelativeLayout>
 
         <Button
+            android:id="@+id/upload_Btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
