--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -110,6 +110,12 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="视频"/>
+            <TextView
+                android:layout_marginLeft="140dp"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="音频"/>
+
 
 
             </LinearLayout>
@@ -126,54 +132,46 @@
                 android:overScrollMode="never" />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler2"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:overScrollMode="never" />
+            android:id="@+id/recycler2"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:overScrollMode="never" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:id="@+id/r1">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/button"
+                    android:layout_below="@+id/recycler3"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="15sp"
+                    android:text="按住说话" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler3"
+                    android:layout_width="120dp"
+                    android:layout_height="70dp"
+                    android:overScrollMode="never"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" />
+
+            </RelativeLayout>
 
         </LinearLayout>
-            <!--<ImageView-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:id="@+id/tv_im"-->
-                <!--android:layout_width="80dp"-->
-                <!--android:layout_height="80dp"-->
-                <!--android:scaleType="fitCenter"-->
-                <!--android:background="@drawable/upload" />-->
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:layout_marginTop="15dp"
-            android:background="@android:color/black"  />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textSize="20dp"
-            android:text="添加语音资料"
-            android:textColor="@android:color/black" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/r1">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/button"
-                android:layout_centerHorizontal="true"
-                android:textSize="15sp"
-                android:text="按住说话" />
-
-        </RelativeLayout>
-
         <Button
             android:id="@+id/upload_Btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
             android:background="@color/colorPrimary"
             android:text="上传" />
