--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -43,6 +43,7 @@
         android:textColor="@android:color/black" />
 
     <EditText
+        android:id="@+id/Tv_Name"
         android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -62,6 +63,7 @@
         android:text="文字描述"
         android:textColor="@android:color/black"/>
     <EditText
+        android:id="@+id/Tv_description"
         android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -76,11 +78,13 @@
             android:layout_marginTop="20dp"
             android:layout_height="1px"
             android:background="@android:color/black"  />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,40 +93,44 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               android:layout_gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
                 android:text="上传"
-                android:textSize="20dp"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="20dp" />
 
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="图片"/>
+                android:text="图片" />
+
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="70dp"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="视频"/>
+                android:text="视频" />
+
             <TextView
-                android:layout_marginLeft="140dp"
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="音频"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="70dp"
+                android:text="音频" />
 
 
+        </LinearLayout>
 
-            </LinearLayout>
         <LinearLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler"
                 android:layout_width="90dp"
@@ -132,46 +140,32 @@
                 android:overScrollMode="never" />
 
             <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler2"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:overScrollMode="never" />
+                android:id="@+id/recycler2"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:overScrollMode="never" />
 
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:id="@+id/r1">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/button"
-                    android:layout_below="@+id/recycler3"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="15sp"
-                    android:text="按住说话" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler3"
-                    android:layout_width="120dp"
-                    android:layout_height="70dp"
-                    android:overScrollMode="never"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
-
-            </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler3"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:overScrollMode="never" />
 
         </LinearLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/black" />
+
         <Button
             android:id="@+id/upload_Btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
             android:background="@color/colorPrimary"
             android:text="上传" />
