--- a/app/src/main/res/drawable/seekbar_bg.xml
+++ b/app/src/main/res/drawable/seekbar_bg.xml
@@ -5,22 +5,20 @@
         <!--形状-->
         <shape android:shape="rectangle">
             <!--大小-->
-            <size android:height="42dp" />
+            <size android:height="42dp"
+                android:width="100dp"/>
             <!--圆角-->
-            <corners android:radius="2dp" />
+            <corners android:radius="20dp" />
             <!--背景-->
-            <solid android:color="#E7EAE9" />
+            <solid android:color="#d6620a" />
             <!--边框-->
-            <stroke
-                android:width="2dp"
-                android:color="#C3C5C4" />
         </shape>
     </item>
     <!--seekBar的进度条-->
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <corners android:radius="2dp" />
+                <corners android:radius="20dp" />
                 <solid android:color="#7AC23C" />
                 <stroke
                     android:width="1dp"
