--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,41 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/upload_bg"
+    android:background="@drawable/login_bg1"
     android:orientation="vertical"
     tools:context="com.org.rivermanage.activaty.LoginActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="80dp"
-
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="黄河工程管理巡查系统"
-            android:textSize="25sp" />
-    </LinearLayout>
-
-
-
     <com.makeramen.roundedimageview.RoundedImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="19dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="60dp"
         android:src="@mipmap/head"
         app:riv_border_color="#333333"
         android:layout_gravity="center"
@@ -49,27 +26,25 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="60dp"
-        android:background="#ffffff"
-        >
+        android:background="@drawable/login_et_bg"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/tv_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="7dp"
             android:text="账号："
             android:textColor="#000"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <EditText android:id="@+id/et_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:hint="输入账号信息"
-            android:text="admin"
+            android:hint="Username"
             android:background="@null"
-            android:padding="10dp"/>
+            android:padding="10dp" />
     </LinearLayout>
     <LinearLayout android:id="@+id/ll_password"
         android:layout_width="match_parent"
@@ -77,20 +52,20 @@
         android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#ffffff">
+        android:background="@drawable/login_et_bg">
         <TextView android:id="@+id/tv_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="7dp"
             android:text="密码："
             android:textColor="#000"
-            android:textSize="20sp"/>
+            android:textSize="15sp"/>
         <EditText android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:hint="输入密码信息"
-            android:text="123456"
+            android:gravity="start"
+            android:hint="Password"
             android:password="true"
             android:background="@null"
             android:padding="10dp"/>
@@ -99,28 +74,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:orientation="horizontal">
-
-
-
         <CheckBox android:id="@+id/chk_rememPwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginLeft="140dp"
             android:text="记住密码"
-            android:textSize="20sp"/>
+            android:textSize="15sp"/>
         <CheckBox android:id="@+id/chk_autoLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="7sp"
             android:text="自动登录"
-            android:textSize="20sp"/>
+            android:textSize="15sp"/>
     </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -131,13 +101,12 @@
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp">
-
+            android:layout_height="wrap_content">
             <SeekBar
                 android:id="@+id/sb"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:max="100"
                 android:progress="0"
                 android:progressDrawable="@drawable/seekbar_bg"
@@ -151,8 +120,8 @@
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="滑动登录"
-                android:textColor="#888888"
-                android:textSize="20dp" />
+                android:textColor="#0e0e0e"
+                android:textSize="15dp" />
         </RelativeLayout>
 
     </LinearLayout>
