--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -20,48 +20,52 @@
             android:scrollbars="vertical"
             android:id="@+id/tv_location"
             android:layout_weight="0.88" />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:drawableLeft="@drawable/ne"
             android:id="@+id/btn_R"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="15dp"
-            android:textSize="13dp"
-            android:text="@string/RefreshLocation" />
+            android:layout_marginTop="30dp"
+            android:background="@drawable/refresh_style"
+            android:textSize="13dp" />
     </LinearLayout>
     <View
+        android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="1px"
         android:background="@android:color/black"  />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textSize="20dp"
-        android:text="主题"
-        android:textColor="@android:color/black" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:textSize="20dp"-->
+        <!--android:text="主题"-->
+        <!--android:textColor="@android:color/black" />-->
 
-    <EditText
-        android:id="@+id/Tv_Name"
-        android:padding="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/bg_edittext"
-        android:gravity="top"
-        android:maxLength="40"
-        android:hint="请填写本次上传主题"
-        />
+    <!--<EditText-->
+        <!--android:id="@+id/Tv_Name"-->
+        <!--android:padding="5dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:background="@drawable/bg_edittext"-->
+        <!--android:gravity="top"-->
+        <!--android:maxLength="40"-->
+        <!--android:hint="请填写本次上传主题"-->
+        <!--/>-->
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:textSize="20dp"
+        android:layout_marginTop="10dp"
         android:text="文字描述"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
+
     <EditText
         android:id="@+id/Tv_description"
         android:padding="5dp"
@@ -97,8 +101,6 @@
                 android:text="上传"
                 android:textColor="@android:color/black"
                 android:textSize="20dp" />
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -156,18 +158,14 @@
                 android:overScrollMode="never" />
 
         </LinearLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:layout_marginTop="15dp"
-            android:background="@android:color/black" />
 
         <Button
             android:id="@+id/upload_Btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/upload_bt_bg"
             android:text="上传" />
     </LinearLayout>
 </LinearLayout>
