--- a/app/src/main/res/layout/guide_item3.xml
+++ b/app/src/main/res/layout/guide_item3.xml
@@ -9,11 +9,15 @@
 
     <TextView
         android:id="@+id/skip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:text="跳过" />
+        android:background="@drawable/guide_tv"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="LOGIN"
+        android:textColor="#ffa600"
+        android:textSize="30sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="68dp" />
 
 </RelativeLayout>
